exports[`image > Direct Gyazo image 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[https://i.gyazo.com/0f82099330f378fe4917a1b4a5fe8815.png]",
        "src": "https://i.gyazo.com/0f82099330f378fe4917a1b4a5fe8815.png",
        "link": ""
      }
    ]
  }
]
`;

exports[`image > Gyazo image 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815]",
        "src": "https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815/thumb/1000",
        "link": ""
      }
    ]
  },
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[https://i.gyazo.com/0f82099330f378fe4917a1b4a5fe8815]",
        "src": "https://i.gyazo.com/0f82099330f378fe4917a1b4a5fe8815/thumb/1000",
        "link": ""
      }
    ]
  },
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815/raw]",
        "src": "https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815/raw",
        "link": ""
      }
    ]
  }
]
`;

exports[`image > Gyazo image with link 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815 https://example.com]",
        "src": "https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815/thumb/1000",
        "link": "https://example.com"
      }
    ]
  },
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[https://example.com https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815]",
        "src": "https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815/thumb/1000",
        "link": "https://example.com"
      }
    ]
  },
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[https://gyazo.com/7057219f5b20ca8afd122945b72453d3 https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815]",
        "src": "https://gyazo.com/0f82099330f378fe4917a1b4a5fe8815/thumb/1000",
        "link": "https://gyazo.com/7057219f5b20ca8afd122945b72453d3"
      }
    ]
  }
]
`;

exports[`image > HTTP jpeg image with special and japanese chars 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[http://example.com/~!@#$%^&*()_+\`-={}\\\\'\\"?,.<>|/画像.jpeg]",
        "src": "http://example.com/~!@#$%^&*()_+\`-={}\\\\'\\"?,.<>|/画像.jpeg",
        "link": ""
      }
    ]
  }
]
`;

exports[`image > HTTPS svg, GIF and WebP image with link 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[https://example.com/image.svg https://example.com/]",
        "src": "https://example.com/image.svg",
        "link": "https://example.com/"
      }
    ]
  },
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[https://example.com/ https://example.com/image.GIF]",
        "src": "https://example.com/image.GIF",
        "link": "https://example.com/"
      }
    ]
  },
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[https://example.com/image.webp https://example.com]",
        "src": "https://example.com/image.webp",
        "link": "https://example.com"
      }
    ]
  }
]
`;

exports[`image > Image with GET parameters 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[http://example.com/image.png?key1=value1&key2=value2]",
        "src": "http://example.com/image.png?key1=value1&key2=value2",
        "link": ""
      }
    ]
  }
]
`;

exports[`image > Image with double image link 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[https://example.com/forward.png https://example.com/backward.png]",
        "src": "https://example.com/backward.png",
        "link": "https://example.com/forward.png"
      }
    ]
  }
]
`;

exports[`image > Simple image 1`] = `
[
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[http://example.com/image.png]",
        "src": "http://example.com/image.png",
        "link": ""
      }
    ]
  },
  {
    "indent": 0,
    "type": "line",
    "nodes": [
      {
        "type": "image",
        "raw": "[https://example.com/image.JPG]",
        "src": "https://example.com/image.JPG",
        "link": ""
      }
    ]
  }
]
`;
